fix alignment on project card description paragraph

--- a/src/components/project-card/project-card.scss
+++ b/src/components/project-card/project-card.scss
@@ -50,6 +50,10 @@
         max-height: 40%;
     }
 
+    .project-description-p {
+        text-align: center;
+    }
+
     .ctas-container {
         display: flex;
         width: 100%;
